Reformatted URL encoder. and optimized imports.