@@ -3,9 +3,13 @@ package api;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class FetchFromOMDb
 {
@@ -22,8 +26,8 @@ public class FetchFromOMDb
         try
         {
             // Encode title and year
-            queryTitle = URLEncoder.encode(title, "UTF-8");
-            queryYear = URLEncoder.encode(year, "UTF-8");
+            queryTitle = URLEncoder.encode(title, StandardCharsets.UTF_8);
+            queryYear = URLEncoder.encode(year, StandardCharsets.UTF_8);
 
             // URL concatenation
             String urlString = "http://www.omdbapi.com/?apikey=" + APIKeys.OMDB_ID
